# SimpleDB

./: Cargo.toml  LICENSE  README.md  test_complete.rs  test_data.json
demo_data/: orders.db  products.db  users.db
encrypted_data/: bank_accounts.db  sensitive_users.db
example_data/: products.db  users.db
examples/: api_server.rs  basic_usage.rs  encrypted_db.rs
src/: api.rs  crypto.rs  database.rs  error.rs  lib.rs  main.rs  storage.rs
test_encrypted/: secrets.db
test_persistence/: persistence_test.db
test_queries/: query_users.db
test_types/: type_test.db
