[package]
name = "simpledb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
aes-gcm = "0.10"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
base64 = "0.21"
hex = "0.4"

[lib]
name = "simpledb"
path = "src/lib.rs"

[[bin]]
name = "simpledb-cli"
path = "src/main.rs"

[[bin]]
name = "test_complete"
path = "test_complete.rs" 